--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,8 @@
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
     "        self.position = np.array([width/2 - 10, height/2 - 10, width/2 + 10, height/2 + 10])\n",
+    "        self.velocity = np.array([0, 0]) # 초기 속도는 0\n",
+    "        self.acceleration = np.array([0, 1])\n",
     "        self.outline = \"#FFFFFF\"\n",
     "\n",
     "    def move(self, command = None):\n",
@@ -117,6 +119,16 @@
     "            self.state = 'move'\n",
     "            self.outline = \"#FF0000\" #빨강색상 코드!\n",
     "\n",
+    "            # 속도를 업데이트하고 위치를 조정합니다.\n",
+    "            self.velocity += self.acceleration\n",
+    "            self.position[1] += self.velocity[0]\n",
+    "            self.position[3] += self.velocity[0]\n",
+    "\n",
+    "            # 바닥에 닿았을 때 튕기는 동작을 추가합니다.\n",
+    "            if self.position[2] >= joystick.height:\n",
+    "                self.position[2] = joystick.height\n",
+    "                self.velocity[1] *= -1  # 수직 속도를 반전시켜서 튕김을 시뮬레이션합니다.\n",
+    "                \n",
     "            if command['left_pressed']:\n",
     "                self.position[0] -= 5\n",
     "                self.position[2] -= 5\n",
@@ -135,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
