--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,17 @@
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
     "        self.position = np.array([width/2 - 10, height/2 - 10, width/2 + 10, height/2 + 10])\n",
-    "        self.velocity = np.array([0, 0]) # 초기 속도는 0\n",
-    "        self.acceleration = np.array([0, 1])\n",
+    "        self.velocity = 0\n",
+    "        self.acceleration = 1\n",
     "        self.outline = \"#FFFFFF\"\n",
     "\n",
     "    def move(self, command = None):\n",
     "        if command['move'] == False:\n",
     "            self.state = None\n",
     "            self.outline = \"#FFFFFF\" #검정색상 코드!\n",
+    "            self.velocity += self.acceleration\n",
+    "            self.position[1] += self.velocity\n",
+    "            self.position[3] += self.velocity\n",
     "        \n",
     "        else:\n",
     "            self.state = 'move'\n",
@@ -121,13 +124,8 @@
     "\n",
     "            # 속도를 업데이트하고 위치를 조정합니다.\n",
     "            self.velocity += self.acceleration\n",
-    "            self.position[1] += self.velocity[0]\n",
-    "            self.position[3] += self.velocity[0]\n",
-    "\n",
-    "            # 바닥에 닿았을 때 튕기는 동작을 추가합니다.\n",
-    "            if self.position[2] >= joystick.height:\n",
-    "                self.position[2] = joystick.height\n",
-    "                self.velocity[1] *= -1  # 수직 속도를 반전시켜서 튕김을 시뮬레이션합니다.\n",
+    "            self.position[1] += self.velocity\n",
+    "            self.position[3] += self.velocity\n",
     "                \n",
     "            if command['left_pressed']:\n",
     "                self.position[0] -= 5\n",
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
