--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,48 +92,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define Character"
+    "Define Ball"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Character:\n",
+    "class Ball:\n",
     "    def __init__(self, width, height):\n",
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
-    "        self.position = np.array([width/2 - 10, height/2 - 10, width/2 + 10, height/2 + 10])\n",
+    "        self.has_jump_item = False\n",
+    "        self.has_shoot_item = False\n",
+    "        self.position = np.array([width/2 - 8, height/2 - 8, width/2 + 8, height/2 + 8])\n",
+    "        self.speed = 5\n",
     "        self.velocity = 0\n",
     "        self.acceleration = 1\n",
-    "        self.outline = \"#FFFFFF\"\n",
+    "        self.outline = \"#000000\"\n",
     "\n",
     "    def move(self, command = None):\n",
+    "        self.velocity += self.acceleration\n",
+    "        self.position[3] += self.velocity\n",
+    "        self.position[1] += self.velocity\n",
+    "\n",
+    "        if (self.position[3] >= 240 and self.velocity > 0):\n",
+    "            self.velocity = -10\n",
+    "\n",
+    "        if self.has_jump_item and not joystick.button_B.value:\n",
+    "            self.velocity = -10\n",
+    "            self.has_jump_item = False\n",
+    "\n",
+    "        if self.has_jump_item and not joystick.button_B.value:\n",
+    "            self.\n",
+    "\n",
     "        if command['move'] == False:\n",
     "            self.state = None\n",
-    "            self.outline = \"#FFFFFF\" #검정색상 코드!\n",
-    "            self.velocity += self.acceleration\n",
-    "            self.position[1] += self.velocity\n",
-    "            self.position[3] += self.velocity\n",
+    "            self.outline = \"#000000\" #검정색상 코드!\n",
     "        \n",
     "        else:\n",
     "            self.state = 'move'\n",
-    "            self.outline = \"#FF0000\" #빨강색상 코드!\n",
-    "\n",
-    "            # 속도를 업데이트하고 위치를 조정합니다.\n",
-    "            self.velocity += self.acceleration\n",
-    "            self.position[1] += self.velocity\n",
-    "            self.position[3] += self.velocity\n",
+    "            self.outline = \"#000000\" #빨강색상 코드!\n",
     "                \n",
     "            if command['left_pressed']:\n",
-    "                self.position[0] -= 5\n",
-    "                self.position[2] -= 5\n",
+    "                self.position[0] -= self.speed\n",
+    "                self.position[2] -= self.speed\n",
     "                \n",
     "            if command['right_pressed']:\n",
-    "                self.position[0] += 5\n",
-    "                self.position[2] += 5"
+    "                self.position[0] += self.speed\n",
+    "                self.position[2] += self.speed\n",
+    "\n",
+    "    def collision_check(self, items):\n",
+    "        for item in items:\n",
+    "            collision = self.overlap(self.position, item.position)\n",
+    "\n",
+    "            if collision:\n",
+    "                item.use(self)\n",
+    "                items.remove(item)\n",
+    "                    \n",
+    "\n",
+    "    def overlap(self, ego_position, other_position):\n",
+    "        return ego_position[0] > other_position[0] and ego_position[1] > other_position[1] \\\n",
+    "            and ego_position[2] < other_position[2] and ego_position[3] < other_position[3]"
    ]
   },
   {
@@ -145,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,50 +177,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m my_draw\u001b[39m.\u001b[39mellipse(\u001b[39mtuple\u001b[39m(my_circle\u001b[39m.\u001b[39mposition), outline \u001b[39m=\u001b[39m my_circle\u001b[39m.\u001b[39moutline, fill \u001b[39m=\u001b[39m (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m#좌표는 동그라미의 왼쪽 위, 오른쪽 아래 점 (x1, y1, x2, y2)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:233\u001b[0m, in \u001b[0;36mDisplay.image\u001b[0;34m(self, img, rotation, x, y)\u001b[0m\n\u001b[1;32m    231\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i)] \u001b[39m=\u001b[39m pix \u001b[39m>>\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m    232\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m pix \u001b[39m&\u001b[39m \u001b[39m0xFF\u001b[39m\n\u001b[0;32m--> 233\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_block(x, y, x \u001b[39m+\u001b[39;49m imwidth \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, y \u001b[39m+\u001b[39;49m imheight \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, pixels)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:170\u001b[0m, in \u001b[0;36mDisplay._block\u001b[0;34m(self, x0, y0, x1, y1, data)\u001b[0m\n\u001b[1;32m    168\u001b[0m     size \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mcalcsize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_DECODE_PIXEL)\n\u001b[1;32m    169\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_RAM_READ, (x1 \u001b[39m-\u001b[39m x0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m (y1 \u001b[39m-\u001b[39m y0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m size)\n\u001b[0;32m--> 170\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_RAM_WRITE, data)\n\u001b[1;32m    171\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:336\u001b[0m, in \u001b[0;36mDisplaySPI.write\u001b[0;34m(self, command, data)\u001b[0m\n\u001b[1;32m    334\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdc_pin\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    335\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspi_device \u001b[39mas\u001b[39;00m spi:\n\u001b[0;32m--> 336\u001b[0m     spi\u001b[39m.\u001b[39;49mwrite(data)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/busio.py:466\u001b[0m, in \u001b[0;36mSPI.write\u001b[0;34m(self, buf, start, end)\u001b[0m\n\u001b[1;32m    464\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, buf, start\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    465\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Write to the SPI device\"\"\"\u001b[39;00m\n\u001b[0;32m--> 466\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spi\u001b[39m.\u001b[39;49mwrite(buf, start, end)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_blinka/microcontroller/generic_linux/spi.py:86\u001b[0m, in \u001b[0;36mSPI.write\u001b[0;34m(self, buf, start, end)\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spi\u001b[39m.\u001b[39mmode \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode\n\u001b[1;32m     85\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spi\u001b[39m.\u001b[39mbits_per_word \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbits\n\u001b[0;32m---> 86\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spi\u001b[39m.\u001b[39;49mwritebytes(buf[start:end])\n\u001b[1;32m     87\u001b[0m     \u001b[39m# self._spi.close()\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m:\n",
-      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/Adafruit_PureIO/spi.py:352\u001b[0m, in \u001b[0;36mSPI.writebytes\u001b[0;34m(self, data, max_speed_hz, bits_per_word, delay)\u001b[0m\n\u001b[1;32m    338\u001b[0m spi_ioc_transfer \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mpack(\n\u001b[1;32m    339\u001b[0m     SPI\u001b[39m.\u001b[39m_IOC_TRANSFER_FORMAT,\n\u001b[1;32m    340\u001b[0m     addressof(transmit_buffer),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    349\u001b[0m     \u001b[39m0\u001b[39m,\n\u001b[1;32m    350\u001b[0m )\n\u001b[1;32m    351\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 352\u001b[0m     ioctl(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle, SPI\u001b[39m.\u001b[39m_IOC_MESSAGE, spi_ioc_transfer)\n\u001b[1;32m    353\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m    354\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(  \u001b[39m# pylint: disable=broad-exception-raised\u001b[39;00m\n\u001b[1;32m    355\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mioctl timeout. Please try a different SPI frequency or less data.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    356\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
    "source": [
-    "# 잔상이 남지 않는 코드 & 대각선 이동 가능\n",
-    "my_circle = Character(joystick.width, joystick.height)\n",
-    "my_draw.rectangle((0, 0, joystick.width, joystick.height), fill = (255, 255, 255, 100))\n",
+    "Define Item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Item:\n",
+    "    def __init__(self, spawn_position):\n",
+    "        self.appearance = 'rectangle'\n",
+    "        self.position = np.array([spawn_position[0] - 25, spawn_position[1] - 25, spawn_position[0] + 25, spawn_position[1] + 25])\n",
+    "        self.outline = \"#00FF00\"\n",
+    "        self.is_collected = False\n",
+    "\n",
+    "    def use(self, ball):\n",
+    "        self.is_collected = True\n",
+    "        ball.has_jump_item = True\n",
+    "\n",
+    "class Jump(Item):\n",
+    "    pass\n",
+    "\n",
+    "class Shoot(Item):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_circle = Ball(joystick.width, joystick.height)\n",
+    "my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
+    "\n",
+    "# 게임 세계에 Jump 아이템 추가\n",
+    "jump_items = [Jump((200, 200)), Jump((0, 200))]  # 필요한 만큼 추가\n",
     "\n",
     "while True:\n",
-    "    command = {'move': False, 'up_pressed': False , 'down_pressed': False, 'left_pressed': False, 'right_pressed': False}\n",
-    "    \n",
-    "    if not joystick.button_L.value:  # left pressed\n",
+    "    command = {'move': False, 'up_pressed': False, 'down_pressed': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "\n",
+    "    if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
     "        command['left_pressed'] = True\n",
     "        command['move'] = True\n",
     "\n",
-    "    if not joystick.button_R.value:  # right pressed\n",
+    "    if not joystick.button_R.value:  # 오른쪽 버튼이 눌린 경우\n",
     "        command['right_pressed'] = True\n",
     "        command['move'] = True\n",
     "\n",
     "    my_circle.move(command)\n",
+    "    my_circle.collision_check(jump_items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
     "\n",
-    "    #그리는 순서가 중요합니다. 배경을 먼저 깔고 위에 그림을 그리고 싶었는데 그림을 그려놓고 배경으로 덮는 결과로 될 수 있습니다.\n",
-    "    my_draw.rectangle((0, 0, joystick.width, joystick.height), fill = (255, 255, 255, 100))\n",
-    "    my_draw.ellipse(tuple(my_circle.position), outline = my_circle.outline, fill = (0, 0, 0))\n",
-    "    #좌표는 동그라미의 왼쪽 위, 오른쪽 아래 점 (x1, y1, x2, y2)\n",
+    "    # 그리기 로직 (순서가 중요함)\n",
+    "    my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
+    "    my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
+    "\n",
+    "    # Jump 아이템 그리기\n",
+    "    for jump_item in jump_items:\n",
+    "        if not jump_item.is_collected:\n",
+    "            my_draw.rectangle(tuple(jump_item.position), outline=jump_item.outline, fill=None)\n",
+    "\n",
+    "    # Update display\n",
     "    joystick.disp.image(my_image)"
    ]
   }
