--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from digitalio import DigitalInOut, Direction\n",
     "from PIL import Image, ImageDraw, ImageFont\n",
     "from adafruit_rgb_display import st7789\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import deque"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +106,7 @@
     "    def __init__(self, width, height):\n",
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
-    "        self.has_jump_item = False\n",
-    "        self.has_shoot_item = False\n",
+    "        self.items_queue = deque()\n",
     "        self.position = np.array([width/2 - 8, height/2 - 8, width/2 + 8, height/2 + 8])\n",
     "        self.speed = 5\n",
     "        self.velocity = 0\n",
@@ -118,15 +118,16 @@
     "        self.position[3] += self.velocity\n",
     "        self.position[1] += self.velocity\n",
     "\n",
-    "        if (self.position[3] >= 240 and self.velocity > 0):\n",
-    "            self.velocity = -10\n",
+    "        if(self.position[3] >= 240 and self.velocity > 0):\n",
+    "            self.velocity = -12\n",
     "\n",
-    "        if self.has_jump_item and not joystick.button_B.value:\n",
-    "            self.velocity = -10\n",
-    "            self.has_jump_item = False\n",
+    "        if( self.speed > 5 ):\n",
+    "            self.speed -= self.acceleration\n",
     "\n",
-    "        if self.has_jump_item and not joystick.button_B.value:\n",
-    "            self.\n",
+    "        if self.items_queue and not joystick.button_B.value:\n",
+    "            current_item = self.items_queue[0]\n",
+    "            current_item.use(self)\n",
+    "            self.items_queue.popleft()\n",
     "\n",
     "        if command['move'] == False:\n",
     "            self.state = None\n",
@@ -149,7 +150,7 @@
     "            collision = self.overlap(self.position, item.position)\n",
     "\n",
     "            if collision:\n",
-    "                item.use(self)\n",
+    "                self.items_queue.append(item)\n",
     "                items.remove(item)\n",
     "                    \n",
     "\n",
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,26 +199,55 @@
     "\n",
     "    def use(self, ball):\n",
     "        self.is_collected = True\n",
-    "        ball.has_jump_item = True\n",
     "\n",
     "class Jump(Item):\n",
-    "    pass\n",
+    "    def __init__(self, spawn_position):\n",
+    "        super().__init__(spawn_position)\n",
+    "\n",
+    "    def use(self, ball):\n",
+    "        super().use(ball)\n",
+    "        ball.velocity = -10\n",
     "\n",
     "class Shoot(Item):\n",
-    "    pass"
+    "    def __init__(self, spawn_position):\n",
+    "        super().__init__(spawn_position)\n",
+    "\n",
+    "    def use(self, ball):\n",
+    "        super().use(ball)\n",
+    "        ball.speed = 16\n",
+    "        ball.velocity -= 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=28'>29</a>\u001b[0m         my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(jump_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39mjump_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=32'>33</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:233\u001b[0m, in \u001b[0;36mDisplay.image\u001b[0;34m(self, img, rotation, x, y)\u001b[0m\n\u001b[1;32m    231\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i)] \u001b[39m=\u001b[39m pix \u001b[39m>>\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m    232\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m pix \u001b[39m&\u001b[39m \u001b[39m0xFF\u001b[39m\n\u001b[0;32m--> 233\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_block(x, y, x \u001b[39m+\u001b[39;49m imwidth \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, y \u001b[39m+\u001b[39;49m imheight \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, pixels)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:170\u001b[0m, in \u001b[0;36mDisplay._block\u001b[0;34m(self, x0, y0, x1, y1, data)\u001b[0m\n\u001b[1;32m    168\u001b[0m     size \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mcalcsize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_DECODE_PIXEL)\n\u001b[1;32m    169\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_RAM_READ, (x1 \u001b[39m-\u001b[39m x0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m (y1 \u001b[39m-\u001b[39m y0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m size)\n\u001b[0;32m--> 170\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_RAM_WRITE, data)\n\u001b[1;32m    171\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:336\u001b[0m, in \u001b[0;36mDisplaySPI.write\u001b[0;34m(self, command, data)\u001b[0m\n\u001b[1;32m    334\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdc_pin\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    335\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspi_device \u001b[39mas\u001b[39;00m spi:\n\u001b[0;32m--> 336\u001b[0m     spi\u001b[39m.\u001b[39;49mwrite(data)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/busio.py:466\u001b[0m, in \u001b[0;36mSPI.write\u001b[0;34m(self, buf, start, end)\u001b[0m\n\u001b[1;32m    464\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, buf, start\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    465\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Write to the SPI device\"\"\"\u001b[39;00m\n\u001b[0;32m--> 466\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spi\u001b[39m.\u001b[39;49mwrite(buf, start, end)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_blinka/microcontroller/generic_linux/spi.py:86\u001b[0m, in \u001b[0;36mSPI.write\u001b[0;34m(self, buf, start, end)\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spi\u001b[39m.\u001b[39mmode \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode\n\u001b[1;32m     85\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_spi\u001b[39m.\u001b[39mbits_per_word \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbits\n\u001b[0;32m---> 86\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_spi\u001b[39m.\u001b[39;49mwritebytes(buf[start:end])\n\u001b[1;32m     87\u001b[0m     \u001b[39m# self._spi.close()\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m:\n",
+      "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/Adafruit_PureIO/spi.py:352\u001b[0m, in \u001b[0;36mSPI.writebytes\u001b[0;34m(self, data, max_speed_hz, bits_per_word, delay)\u001b[0m\n\u001b[1;32m    338\u001b[0m spi_ioc_transfer \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mpack(\n\u001b[1;32m    339\u001b[0m     SPI\u001b[39m.\u001b[39m_IOC_TRANSFER_FORMAT,\n\u001b[1;32m    340\u001b[0m     addressof(transmit_buffer),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    349\u001b[0m     \u001b[39m0\u001b[39m,\n\u001b[1;32m    350\u001b[0m )\n\u001b[1;32m    351\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 352\u001b[0m     ioctl(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle, SPI\u001b[39m.\u001b[39m_IOC_MESSAGE, spi_ioc_transfer)\n\u001b[1;32m    353\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m    354\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(  \u001b[39m# pylint: disable=broad-exception-raised\u001b[39;00m\n\u001b[1;32m    355\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mioctl timeout. Please try a different SPI frequency or less data.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    356\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "my_circle = Ball(joystick.width, joystick.height)\n",
     "my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
     "\n",
-    "# 게임 세계에 Jump 아이템 추가\n",
-    "jump_items = [Jump((200, 200)), Jump((0, 200))]  # 필요한 만큼 추가\n",
+    "# 게임 세계에 아이템 추가\n",
+    "items = [Jump((200, 200)), Shoot((0, 200))]  # 필요한 만큼 추가\n",
+    "\n",
     "\n",
     "while True:\n",
     "    command = {'move': False, 'up_pressed': False, 'down_pressed': False, 'left_pressed': False, 'right_pressed': False}\n",
@@ -231,16 +261,17 @@
     "        command['move'] = True\n",
     "\n",
     "    my_circle.move(command)\n",
-    "    my_circle.collision_check(jump_items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
+    "    my_circle.collision_check(items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
     "\n",
     "    # 그리기 로직 (순서가 중요함)\n",
     "    my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
     "    my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
     "\n",
     "    # Jump 아이템 그리기\n",
-    "    for jump_item in jump_items:\n",
+    "    for jump_item in items:\n",
     "        if not jump_item.is_collected:\n",
     "            my_draw.rectangle(tuple(jump_item.position), outline=jump_item.outline, fill=None)\n",
+    "\n",
     "\n",
     "    # Update display\n",
     "    joystick.disp.image(my_image)"
