--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,39 +103,45 @@
    "outputs": [],
    "source": [
     "class Ball:\n",
-    "    def __init__(self, width, height):\n",
+    "    # 공모양, x축 속도, y축 가속도, \n",
+    "    def __init__(self, width, height, size = 8):\n",
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
     "        self.items_queue = deque()\n",
-    "        self.position = np.array([width/2 - 8, height/2 - 8, width/2 + 8, height/2 + 8])\n",
+    "        self.position = np.array([width/2 - size, height/2 - size, width/2 + size, height/2 + size])\n",
     "        self.speed = 5\n",
     "        self.velocity = 0\n",
     "        self.acceleration = 1\n",
     "        self.outline = \"#000000\"\n",
     "\n",
+    "    # 움직임 정의\n",
     "    def move(self, command = None):\n",
+    "\n",
+    "        # y축에 대한 정의\n",
     "        self.velocity += self.acceleration\n",
     "        self.position[3] += self.velocity\n",
     "        self.position[1] += self.velocity\n",
     "\n",
     "        if(self.position[3] >= 240 and self.velocity > 0):\n",
-    "            self.velocity = -12\n",
+    "            self.velocity = -11\n",
     "\n",
+    "        # shoot 아이템 때문에 들어간 코드\n",
     "        if( self.speed > 5 ):\n",
     "            self.speed -= self.acceleration\n",
     "\n",
+    "        # 아이템 사용할 때 사용될 코드(조건)\n",
     "        if self.items_queue and not joystick.button_B.value:\n",
     "            current_item = self.items_queue[0]\n",
     "            current_item.use(self)\n",
     "            self.items_queue.popleft()\n",
     "\n",
+    "        # 가만히 있을 때\n",
     "        if command['move'] == False:\n",
     "            self.state = None\n",
-    "            self.outline = \"#000000\" #검정색상 코드!\n",
     "        \n",
+    "        # 움직일 때\n",
     "        else:\n",
     "            self.state = 'move'\n",
-    "            self.outline = \"#000000\" #빨강색상 코드!\n",
     "                \n",
     "            if command['left_pressed']:\n",
     "                self.position[0] -= self.speed\n",
@@ -145,6 +151,7 @@
     "                self.position[0] += self.speed\n",
     "                self.position[2] += self.speed\n",
     "\n",
+    "    # 아이템을 먹는 거 체크\n",
     "    def collision_check(self, items):\n",
     "        for item in items:\n",
     "            collision = self.overlap(self.position, item.position)\n",
@@ -152,11 +159,10 @@
     "            if collision:\n",
     "                self.items_queue.append(item)\n",
     "                items.remove(item)\n",
-    "                    \n",
     "\n",
     "    def overlap(self, ego_position, other_position):\n",
-    "        return ego_position[0] > other_position[0] and ego_position[1] > other_position[1] \\\n",
-    "            and ego_position[2] < other_position[2] and ego_position[3] < other_position[3]"
+    "        return ego_position[0] < other_position[2] and ego_position[1] < other_position[3] \\\n",
+    "            and ego_position[2] > other_position[0] and ego_position[3] > other_position[1]\n"
    ]
   },
   {
@@ -168,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,41 +192,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Item:\n",
-    "    def __init__(self, spawn_position):\n",
-    "        self.appearance = 'rectangle'\n",
-    "        self.position = np.array([spawn_position[0] - 25, spawn_position[1] - 25, spawn_position[0] + 25, spawn_position[1] + 25])\n",
+    "    def __init__(self, spawn_position, size = 13, image_path=None):\n",
+    "        self.appearance = 'image'\n",
+    "        self.position = np.array([spawn_position[0] - size, spawn_position[1] - size, spawn_position[0] + size, spawn_position[1] + size])\n",
     "        self.outline = \"#00FF00\"\n",
     "        self.is_collected = False\n",
+    "        self.image = None\n",
+    "\n",
+    "        # 만약 image_path가 존재한다면 그걸 사용해라\n",
+    "        if image_path:\n",
+    "            self.image = Image.open(image_path)\n",
     "\n",
     "    def use(self, ball):\n",
     "        self.is_collected = True\n",
     "\n",
+    "# 점프아이템에 대한 정의\n",
     "class Jump(Item):\n",
     "    def __init__(self, spawn_position):\n",
-    "        super().__init__(spawn_position)\n",
+    "        super().__init__(spawn_position, image_path=\"Jump.png\")\n",
     "\n",
+    "    #높게 뛰게\n",
     "    def use(self, ball):\n",
     "        super().use(ball)\n",
     "        ball.velocity = -10\n",
     "\n",
+    "# 슛아이템에 대한 정의\n",
     "class Shoot(Item):\n",
     "    def __init__(self, spawn_position):\n",
-    "        super().__init__(spawn_position)\n",
+    "        super().__init__(spawn_position, image_path=\"Shoot.png\")\n",
     "\n",
+    "    # 빠르게 날아가기\n",
     "    def use(self, ball):\n",
     "        super().use(ball)\n",
     "        ball.speed = 16\n",
-    "        ball.velocity -= 2\n"
+    "        ball.velocity -= 3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +245,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=28'>29</a>\u001b[0m         my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(jump_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39mjump_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=32'>33</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
+      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m             my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(jump_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39mjump_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:233\u001b[0m, in \u001b[0;36mDisplay.image\u001b[0;34m(self, img, rotation, x, y)\u001b[0m\n\u001b[1;32m    231\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i)] \u001b[39m=\u001b[39m pix \u001b[39m>>\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m    232\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m pix \u001b[39m&\u001b[39m \u001b[39m0xFF\u001b[39m\n\u001b[0;32m--> 233\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_block(x, y, x \u001b[39m+\u001b[39;49m imwidth \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, y \u001b[39m+\u001b[39;49m imheight \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, pixels)\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:170\u001b[0m, in \u001b[0;36mDisplay._block\u001b[0;34m(self, x0, y0, x1, y1, data)\u001b[0m\n\u001b[1;32m    168\u001b[0m     size \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mcalcsize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_DECODE_PIXEL)\n\u001b[1;32m    169\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_RAM_READ, (x1 \u001b[39m-\u001b[39m x0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m (y1 \u001b[39m-\u001b[39m y0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m size)\n\u001b[0;32m--> 170\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_RAM_WRITE, data)\n\u001b[1;32m    171\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:336\u001b[0m, in \u001b[0;36mDisplaySPI.write\u001b[0;34m(self, command, data)\u001b[0m\n\u001b[1;32m    334\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdc_pin\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    335\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspi_device \u001b[39mas\u001b[39;00m spi:\n\u001b[0;32m--> 336\u001b[0m     spi\u001b[39m.\u001b[39;49mwrite(data)\n",
@@ -246,11 +261,11 @@
     "my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
     "\n",
     "# 게임 세계에 아이템 추가\n",
-    "items = [Jump((200, 200)), Shoot((0, 200))]  # 필요한 만큼 추가\n",
+    "items = [Jump((200, joystick.height -14)), Shoot((20, joystick.height - 14))]  # 필요한 만큼 추가\n",
     "\n",
     "\n",
     "while True:\n",
-    "    command = {'move': False, 'up_pressed': False, 'down_pressed': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "    command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
     "\n",
     "    if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
     "        command['left_pressed'] = True\n",
@@ -265,12 +280,21 @@
     "\n",
     "    # 그리기 로직 (순서가 중요함)\n",
     "    my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
-    "    my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
     "\n",
-    "    # Jump 아이템 그리기\n",
+    "    # 아이템을 가지고 있다면 주황색으로, 아니면 노란색으로\n",
+    "    if( my_circle.items_queue ):\n",
+    "        my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 165, 0, 255))\n",
+    "    else:\n",
+    "        my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
+    "\n",
+    "    # 아이템 그리기\n",
     "    for jump_item in items:\n",
     "        if not jump_item.is_collected:\n",
-    "            my_draw.rectangle(tuple(jump_item.position), outline=jump_item.outline, fill=None)\n",
+    "            # 아이템 이미지를 그리기\n",
+    "            if jump_item.image:\n",
+    "                my_image.paste(jump_item.image, (int(jump_item.position[0]), int(jump_item.position[1])))\n",
+    "            else:\n",
+    "                my_draw.rectangle(tuple(jump_item.position), outline=jump_item.outline, fill=None)\n",
     "\n",
     "\n",
     "    # Update display\n",
